[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Scripts/PlayerController.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 5 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 24, 24 )
z_index = 1000
z_as_relative = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Skin" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, 5 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="BoostParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.3
emission_shape = 2
emission_rect_extents = Vector2( 4, 4 )
spread = 107.53
gravity = Vector2( -1000, 0 )
initial_velocity = 18.04
hue_variation = 1.0
hue_variation_random = 1.0

[node name="MagnetParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
lifetime = 0.7
local_coords = false
emission_shape = 1
emission_sphere_radius = 20.0
spread = 107.53
gravity = Vector2( 0, 0 )
radial_accel = -70.0
color = Color( 0.388235, 0.607843, 1, 1 )

[node name="MultiplierParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 4, 4 )
gravity = Vector2( 0, -98.8 )
linear_accel = -83.12
linear_accel_random = 1.0
color = Color( 0.87451, 0.443137, 0.14902, 1 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
